--- a/rm94898/aula05/src/index.css
+++ b/rm94898/aula05/src/index.css
@@ -6,6 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
+  background-color: rgb(40, 39, 51);
+  color: white;
+  ;
+
 }
 
 code {
